--- a/rectangle.html
+++ b/rectangle.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./rectangle.css">
+    <link rel="stylesheet" href="./rectangle.min.css">
+
+    <!-- <link rel="stylesheet" href="./rectangle.css"> -->
 </head>
 <body>
     <div>
