--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <label for="">面积：</label>
   <input id="area" type="text">
 </div>
- <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+ <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
  <script src="util.js"></script>
  <script src="rectangle.js"></script>
 </body>
